y.output
State 22 conflicts: 1 shift/reduce


Grammar

    0 $accept: Linguagem $end

    1 Linguagem: Expressao
    2          | Comentario
    3          | Expressao Linguagem
    4          | Comentario Linguagem

    5 ListaExpressao: Expressao
    6               | Expressao ListaExpressao

    7 Comentario: COMENT

    8 Expressao: DeclaraInt ';'
    9          | DeclaraChar ';'
   10          | Operacao ';'
   11          | AtribuicaoInt ';'
   12          | AtribuicaoChar ';'
   13          | Comparacao ';'
   14          | Ciclo
   15          | IfElse

   16 Ciclo: WHILE '(' Comparacao ')' '{' ListaExpressao '}'

   17 IfElse: IF '(' Comparacao ')' '{' ListaExpressao '}'
   18       | IF '(' Comparacao ')' '{' ListaExpressao '}' ELSE '{' ListaExpressao '}'

   19 DeclaraInt: INT ListaVariaveisInt

   20 ListaVariaveisInt: Variavel
   21                  | Variavel '=' num
   22                  | Variavel ',' ListaVariaveisInt
   23                  | Variavel '=' num ',' ListaVariaveisInt

   24 DeclaraChar: CHAR ListaVariaveisChar

   25 ListaVariaveisChar: Variavel
   26                   | Variavel '=' '\'' car '\''
   27                   | Variavel ',' ListaVariaveisChar
   28                   | Variavel '=' '\'' car '\'' ',' ListaVariaveisChar

   29 Operacao: Termo Operador Termo
   30         | Termo Operador '(' Operacao ')'
   31         | '(' Operacao ')' Operador Termo
   32         | Operacao Operador Termo

   33 AtribuicaoInt: Variavel '=' num
   34              | Variavel '=' Operacao

   35 AtribuicaoChar: Variavel '=' '\'' car '\''

   36 Comparacao: Termo OpComp Termo

   37 OpComp: '<'
   38       | '>'
   39       | '=' '='
   40       | '!' '='
   41       | '<' '='
   42       | '>' '='

   43 Operador: '+'
   44         | '-'
   45         | '*'
   46         | '/'

   47 Termo: Variavel
   48      | num

   49 Variavel: pal
   50         | car


Terminals, with rules where they appear

$end (0) 0
'!' (33) 40
'\'' (39) 26 28 35
'(' (40) 16 17 18 30 31
')' (41) 16 17 18 30 31
'*' (42) 45
'+' (43) 43
',' (44) 22 23 27 28
'-' (45) 44
'/' (47) 46
';' (59) 8 9 10 11 12 13
'<' (60) 37 41
'=' (61) 21 23 26 28 33 34 35 39 40 41 42
'>' (62) 38 42
'{' (123) 16 17 18
'}' (125) 16 17 18
error (256)
INT (258) 19
CHAR (259) 24
WHILE (260) 16
IF (261) 17 18
ELSE (262) 18
COMENT (263) 7
pal (264) 49
num (265) 21 23 33 48
car (266) 26 28 35 50


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
Linguagem (28)
    on left: 1 2 3 4, on right: 0 3 4
ListaExpressao (29)
    on left: 5 6, on right: 6 16 17 18
Comentario (30)
    on left: 7, on right: 2 4
Expressao (31)
    on left: 8 9 10 11 12 13 14 15, on right: 1 3 5 6
Ciclo (32)
    on left: 16, on right: 14
IfElse (33)
    on left: 17 18, on right: 15
DeclaraInt (34)
    on left: 19, on right: 8
ListaVariaveisInt (35)
    on left: 20 21 22 23, on right: 19 22 23
DeclaraChar (36)
    on left: 24, on right: 9
ListaVariaveisChar (37)
    on left: 25 26 27 28, on right: 24 27 28
Operacao (38)
    on left: 29 30 31 32, on right: 10 30 31 32 34
AtribuicaoInt (39)
    on left: 33 34, on right: 11
AtribuicaoChar (40)
    on left: 35, on right: 12
Comparacao (41)
    on left: 36, on right: 13 16 17 18
OpComp (42)
    on left: 37 38 39 40 41 42, on right: 36
Operador (43)
    on left: 43 44 45 46, on right: 29 30 31 32
Termo (44)
    on left: 47 48, on right: 29 30 31 32 36
Variavel (45)
    on left: 49 50, on right: 20 21 22 23 25 26 27 28 33 34 35 47


State 0

    0 $accept: . Linguagem $end

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    WHILE   shift, and go to state 3
    IF      shift, and go to state 4
    COMENT  shift, and go to state 5
    pal     shift, and go to state 6
    num     shift, and go to state 7
    car     shift, and go to state 8
    '('     shift, and go to state 9

    Linguagem       go to state 10
    Comentario      go to state 11
    Expressao       go to state 12
    Ciclo           go to state 13
    IfElse          go to state 14
    DeclaraInt      go to state 15
    DeclaraChar     go to state 16
    Operacao        go to state 17
    AtribuicaoInt   go to state 18
    AtribuicaoChar  go to state 19
    Comparacao      go to state 20
    Termo           go to state 21
    Variavel        go to state 22


State 1

   19 DeclaraInt: INT . ListaVariaveisInt

    pal  shift, and go to state 6
    car  shift, and go to state 8

    ListaVariaveisInt  go to state 23
    Variavel           go to state 24


State 2

   24 DeclaraChar: CHAR . ListaVariaveisChar

    pal  shift, and go to state 6
    car  shift, and go to state 8

    ListaVariaveisChar  go to state 25
    Variavel            go to state 26


State 3

   16 Ciclo: WHILE . '(' Comparacao ')' '{' ListaExpressao '}'

    '('  shift, and go to state 27


State 4

   17 IfElse: IF . '(' Comparacao ')' '{' ListaExpressao '}'
   18       | IF . '(' Comparacao ')' '{' ListaExpressao '}' ELSE '{' ListaExpressao '}'

    '('  shift, and go to state 28


State 5

    7 Comentario: COMENT .

    $default  reduce using rule 7 (Comentario)


State 6

   49 Variavel: pal .

    $default  reduce using rule 49 (Variavel)


State 7

   48 Termo: num .

    $default  reduce using rule 48 (Termo)


State 8

   50 Variavel: car .

    $default  reduce using rule 50 (Variavel)


State 9

   31 Operacao: '(' . Operacao ')' Operador Termo

    pal  shift, and go to state 6
    num  shift, and go to state 7
    car  shift, and go to state 8
    '('  shift, and go to state 9

    Operacao  go to state 29
    Termo     go to state 30
    Variavel  go to state 31


State 10

    0 $accept: Linguagem . $end

    $end  shift, and go to state 32


State 11

    2 Linguagem: Comentario .
    4          | Comentario . Linguagem

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    WHILE   shift, and go to state 3
    IF      shift, and go to state 4
    COMENT  shift, and go to state 5
    pal     shift, and go to state 6
    num     shift, and go to state 7
    car     shift, and go to state 8
    '('     shift, and go to state 9

    $default  reduce using rule 2 (Linguagem)

    Linguagem       go to state 33
    Comentario      go to state 11
    Expressao       go to state 12
    Ciclo           go to state 13
    IfElse          go to state 14
    DeclaraInt      go to state 15
    DeclaraChar     go to state 16
    Operacao        go to state 17
    AtribuicaoInt   go to state 18
    AtribuicaoChar  go to state 19
    Comparacao      go to state 20
    Termo           go to state 21
    Variavel        go to state 22


State 12

    1 Linguagem: Expressao .
    3          | Expressao . Linguagem

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    WHILE   shift, and go to state 3
    IF      shift, and go to state 4
    COMENT  shift, and go to state 5
    pal     shift, and go to state 6
    num     shift, and go to state 7
    car     shift, and go to state 8
    '('     shift, and go to state 9

    $default  reduce using rule 1 (Linguagem)

    Linguagem       go to state 34
    Comentario      go to state 11
    Expressao       go to state 12
    Ciclo           go to state 13
    IfElse          go to state 14
    DeclaraInt      go to state 15
    DeclaraChar     go to state 16
    Operacao        go to state 17
    AtribuicaoInt   go to state 18
    AtribuicaoChar  go to state 19
    Comparacao      go to state 20
    Termo           go to state 21
    Variavel        go to state 22


State 13

   14 Expressao: Ciclo .

    $default  reduce using rule 14 (Expressao)


State 14

   15 Expressao: IfElse .

    $default  reduce using rule 15 (Expressao)


State 15

    8 Expressao: DeclaraInt . ';'

    ';'  shift, and go to state 35


State 16

    9 Expressao: DeclaraChar . ';'

    ';'  shift, and go to state 36


State 17

   10 Expressao: Operacao . ';'
   32 Operacao: Operacao . Operador Termo

    ';'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    Operador  go to state 42


State 18

   11 Expressao: AtribuicaoInt . ';'

    ';'  shift, and go to state 43


State 19

   12 Expressao: AtribuicaoChar . ';'

    ';'  shift, and go to state 44


State 20

   13 Expressao: Comparacao . ';'

    ';'  shift, and go to state 45


State 21

   29 Operacao: Termo . Operador Termo
   30         | Termo . Operador '(' Operacao ')'
   36 Comparacao: Termo . OpComp Termo

    '='  shift, and go to state 46
    '<'  shift, and go to state 47
    '>'  shift, and go to state 48
    '!'  shift, and go to state 49
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    OpComp    go to state 50
    Operador  go to state 51


State 22

   33 AtribuicaoInt: Variavel . '=' num
   34              | Variavel . '=' Operacao
   35 AtribuicaoChar: Variavel . '=' '\'' car '\''
   47 Termo: Variavel .

    '='  shift, and go to state 52

    '='       [reduce using rule 47 (Termo)]
    $default  reduce using rule 47 (Termo)


State 23

   19 DeclaraInt: INT ListaVariaveisInt .

    $default  reduce using rule 19 (DeclaraInt)


State 24

   20 ListaVariaveisInt: Variavel .
   21                  | Variavel . '=' num
   22                  | Variavel . ',' ListaVariaveisInt
   23                  | Variavel . '=' num ',' ListaVariaveisInt

    '='  shift, and go to state 53
    ','  shift, and go to state 54

    $default  reduce using rule 20 (ListaVariaveisInt)


State 25

   24 DeclaraChar: CHAR ListaVariaveisChar .

    $default  reduce using rule 24 (DeclaraChar)


State 26

   25 ListaVariaveisChar: Variavel .
   26                   | Variavel . '=' '\'' car '\''
   27                   | Variavel . ',' ListaVariaveisChar
   28                   | Variavel . '=' '\'' car '\'' ',' ListaVariaveisChar

    '='  shift, and go to state 55
    ','  shift, and go to state 56

    $default  reduce using rule 25 (ListaVariaveisChar)


State 27

   16 Ciclo: WHILE '(' . Comparacao ')' '{' ListaExpressao '}'

    pal  shift, and go to state 6
    num  shift, and go to state 7
    car  shift, and go to state 8

    Comparacao  go to state 57
    Termo       go to state 58
    Variavel    go to state 31


State 28

   17 IfElse: IF '(' . Comparacao ')' '{' ListaExpressao '}'
   18       | IF '(' . Comparacao ')' '{' ListaExpressao '}' ELSE '{' ListaExpressao '}'

    pal  shift, and go to state 6
    num  shift, and go to state 7
    car  shift, and go to state 8

    Comparacao  go to state 59
    Termo       go to state 58
    Variavel    go to state 31


State 29

   31 Operacao: '(' Operacao . ')' Operador Termo
   32         | Operacao . Operador Termo

    ')'  shift, and go to state 60
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    Operador  go to state 42


State 30

   29 Operacao: Termo . Operador Termo
   30         | Termo . Operador '(' Operacao ')'

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    Operador  go to state 51


State 31

   47 Termo: Variavel .

    $default  reduce using rule 47 (Termo)


State 32

    0 $accept: Linguagem $end .

    $default  accept


State 33

    4 Linguagem: Comentario Linguagem .

    $default  reduce using rule 4 (Linguagem)


State 34

    3 Linguagem: Expressao Linguagem .

    $default  reduce using rule 3 (Linguagem)


State 35

    8 Expressao: DeclaraInt ';' .

    $default  reduce using rule 8 (Expressao)


State 36

    9 Expressao: DeclaraChar ';' .

    $default  reduce using rule 9 (Expressao)


State 37

   10 Expressao: Operacao ';' .

    $default  reduce using rule 10 (Expressao)


State 38

   43 Operador: '+' .

    $default  reduce using rule 43 (Operador)


State 39

   44 Operador: '-' .

    $default  reduce using rule 44 (Operador)


State 40

   45 Operador: '*' .

    $default  reduce using rule 45 (Operador)


State 41

   46 Operador: '/' .

    $default  reduce using rule 46 (Operador)


State 42

   32 Operacao: Operacao Operador . Termo

    pal  shift, and go to state 6
    num  shift, and go to state 7
    car  shift, and go to state 8

    Termo     go to state 61
    Variavel  go to state 31


State 43

   11 Expressao: AtribuicaoInt ';' .

    $default  reduce using rule 11 (Expressao)


State 44

   12 Expressao: AtribuicaoChar ';' .

    $default  reduce using rule 12 (Expressao)


State 45

   13 Expressao: Comparacao ';' .

    $default  reduce using rule 13 (Expressao)


State 46

   39 OpComp: '=' . '='

    '='  shift, and go to state 62


State 47

   37 OpComp: '<' .
   41       | '<' . '='

    '='  shift, and go to state 63

    $default  reduce using rule 37 (OpComp)


State 48

   38 OpComp: '>' .
   42       | '>' . '='

    '='  shift, and go to state 64

    $default  reduce using rule 38 (OpComp)


State 49

   40 OpComp: '!' . '='

    '='  shift, and go to state 65


State 50

   36 Comparacao: Termo OpComp . Termo

    pal  shift, and go to state 6
    num  shift, and go to state 7
    car  shift, and go to state 8

    Termo     go to state 66
    Variavel  go to state 31


State 51

   29 Operacao: Termo Operador . Termo
   30         | Termo Operador . '(' Operacao ')'

    pal  shift, and go to state 6
    num  shift, and go to state 7
    car  shift, and go to state 8
    '('  shift, and go to state 67

    Termo     go to state 68
    Variavel  go to state 31


State 52

   33 AtribuicaoInt: Variavel '=' . num
   34              | Variavel '=' . Operacao
   35 AtribuicaoChar: Variavel '=' . '\'' car '\''

    pal   shift, and go to state 6
    num   shift, and go to state 69
    car   shift, and go to state 8
    '('   shift, and go to state 9
    '\''  shift, and go to state 70

    Operacao  go to state 71
    Termo     go to state 30
    Variavel  go to state 31


State 53

   21 ListaVariaveisInt: Variavel '=' . num
   23                  | Variavel '=' . num ',' ListaVariaveisInt

    num  shift, and go to state 72


State 54

   22 ListaVariaveisInt: Variavel ',' . ListaVariaveisInt

    pal  shift, and go to state 6
    car  shift, and go to state 8

    ListaVariaveisInt  go to state 73
    Variavel           go to state 24


State 55

   26 ListaVariaveisChar: Variavel '=' . '\'' car '\''
   28                   | Variavel '=' . '\'' car '\'' ',' ListaVariaveisChar

    '\''  shift, and go to state 74


State 56

   27 ListaVariaveisChar: Variavel ',' . ListaVariaveisChar

    pal  shift, and go to state 6
    car  shift, and go to state 8

    ListaVariaveisChar  go to state 75
    Variavel            go to state 26


State 57

   16 Ciclo: WHILE '(' Comparacao . ')' '{' ListaExpressao '}'

    ')'  shift, and go to state 76


State 58

   36 Comparacao: Termo . OpComp Termo

    '='  shift, and go to state 46
    '<'  shift, and go to state 47
    '>'  shift, and go to state 48
    '!'  shift, and go to state 49

    OpComp  go to state 50


State 59

   17 IfElse: IF '(' Comparacao . ')' '{' ListaExpressao '}'
   18       | IF '(' Comparacao . ')' '{' ListaExpressao '}' ELSE '{' ListaExpressao '}'

    ')'  shift, and go to state 77


State 60

   31 Operacao: '(' Operacao ')' . Operador Termo

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    Operador  go to state 78


State 61

   32 Operacao: Operacao Operador Termo .

    $default  reduce using rule 32 (Operacao)


State 62

   39 OpComp: '=' '=' .

    $default  reduce using rule 39 (OpComp)


State 63

   41 OpComp: '<' '=' .

    $default  reduce using rule 41 (OpComp)


State 64

   42 OpComp: '>' '=' .

    $default  reduce using rule 42 (OpComp)


State 65

   40 OpComp: '!' '=' .

    $default  reduce using rule 40 (OpComp)


State 66

   36 Comparacao: Termo OpComp Termo .

    $default  reduce using rule 36 (Comparacao)


State 67

   30 Operacao: Termo Operador '(' . Operacao ')'

    pal  shift, and go to state 6
    num  shift, and go to state 7
    car  shift, and go to state 8
    '('  shift, and go to state 9

    Operacao  go to state 79
    Termo     go to state 30
    Variavel  go to state 31


State 68

   29 Operacao: Termo Operador Termo .

    $default  reduce using rule 29 (Operacao)


State 69

   33 AtribuicaoInt: Variavel '=' num .
   48 Termo: num .

    ';'       reduce using rule 33 (AtribuicaoInt)
    $default  reduce using rule 48 (Termo)


State 70

   35 AtribuicaoChar: Variavel '=' '\'' . car '\''

    car  shift, and go to state 80


State 71

   32 Operacao: Operacao . Operador Termo
   34 AtribuicaoInt: Variavel '=' Operacao .

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    $default  reduce using rule 34 (AtribuicaoInt)

    Operador  go to state 42


State 72

   21 ListaVariaveisInt: Variavel '=' num .
   23                  | Variavel '=' num . ',' ListaVariaveisInt

    ','  shift, and go to state 81

    $default  reduce using rule 21 (ListaVariaveisInt)


State 73

   22 ListaVariaveisInt: Variavel ',' ListaVariaveisInt .

    $default  reduce using rule 22 (ListaVariaveisInt)


State 74

   26 ListaVariaveisChar: Variavel '=' '\'' . car '\''
   28                   | Variavel '=' '\'' . car '\'' ',' ListaVariaveisChar

    car  shift, and go to state 82


State 75

   27 ListaVariaveisChar: Variavel ',' ListaVariaveisChar .

    $default  reduce using rule 27 (ListaVariaveisChar)


State 76

   16 Ciclo: WHILE '(' Comparacao ')' . '{' ListaExpressao '}'

    '{'  shift, and go to state 83


State 77

   17 IfElse: IF '(' Comparacao ')' . '{' ListaExpressao '}'
   18       | IF '(' Comparacao ')' . '{' ListaExpressao '}' ELSE '{' ListaExpressao '}'

    '{'  shift, and go to state 84


State 78

   31 Operacao: '(' Operacao ')' Operador . Termo

    pal  shift, and go to state 6
    num  shift, and go to state 7
    car  shift, and go to state 8

    Termo     go to state 85
    Variavel  go to state 31


State 79

   30 Operacao: Termo Operador '(' Operacao . ')'
   32         | Operacao . Operador Termo

    ')'  shift, and go to state 86
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    Operador  go to state 42


State 80

   35 AtribuicaoChar: Variavel '=' '\'' car . '\''

    '\''  shift, and go to state 87


State 81

   23 ListaVariaveisInt: Variavel '=' num ',' . ListaVariaveisInt

    pal  shift, and go to state 6
    car  shift, and go to state 8

    ListaVariaveisInt  go to state 88
    Variavel           go to state 24


State 82

   26 ListaVariaveisChar: Variavel '=' '\'' car . '\''
   28                   | Variavel '=' '\'' car . '\'' ',' ListaVariaveisChar

    '\''  shift, and go to state 89


State 83

   16 Ciclo: WHILE '(' Comparacao ')' '{' . ListaExpressao '}'

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    WHILE  shift, and go to state 3
    IF     shift, and go to state 4
    pal    shift, and go to state 6
    num    shift, and go to state 7
    car    shift, and go to state 8
    '('    shift, and go to state 9

    ListaExpressao  go to state 90
    Expressao       go to state 91
    Ciclo           go to state 13
    IfElse          go to state 14
    DeclaraInt      go to state 15
    DeclaraChar     go to state 16
    Operacao        go to state 17
    AtribuicaoInt   go to state 18
    AtribuicaoChar  go to state 19
    Comparacao      go to state 20
    Termo           go to state 21
    Variavel        go to state 22


State 84

   17 IfElse: IF '(' Comparacao ')' '{' . ListaExpressao '}'
   18       | IF '(' Comparacao ')' '{' . ListaExpressao '}' ELSE '{' ListaExpressao '}'

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    WHILE  shift, and go to state 3
    IF     shift, and go to state 4
    pal    shift, and go to state 6
    num    shift, and go to state 7
    car    shift, and go to state 8
    '('    shift, and go to state 9

    ListaExpressao  go to state 92
    Expressao       go to state 91
    Ciclo           go to state 13
    IfElse          go to state 14
    DeclaraInt      go to state 15
    DeclaraChar     go to state 16
    Operacao        go to state 17
    AtribuicaoInt   go to state 18
    AtribuicaoChar  go to state 19
    Comparacao      go to state 20
    Termo           go to state 21
    Variavel        go to state 22


State 85

   31 Operacao: '(' Operacao ')' Operador Termo .

    $default  reduce using rule 31 (Operacao)


State 86

   30 Operacao: Termo Operador '(' Operacao ')' .

    $default  reduce using rule 30 (Operacao)


State 87

   35 AtribuicaoChar: Variavel '=' '\'' car '\'' .

    $default  reduce using rule 35 (AtribuicaoChar)


State 88

   23 ListaVariaveisInt: Variavel '=' num ',' ListaVariaveisInt .

    $default  reduce using rule 23 (ListaVariaveisInt)


State 89

   26 ListaVariaveisChar: Variavel '=' '\'' car '\'' .
   28                   | Variavel '=' '\'' car '\'' . ',' ListaVariaveisChar

    ','  shift, and go to state 93

    $default  reduce using rule 26 (ListaVariaveisChar)


State 90

   16 Ciclo: WHILE '(' Comparacao ')' '{' ListaExpressao . '}'

    '}'  shift, and go to state 94


State 91

    5 ListaExpressao: Expressao .
    6               | Expressao . ListaExpressao

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    WHILE  shift, and go to state 3
    IF     shift, and go to state 4
    pal    shift, and go to state 6
    num    shift, and go to state 7
    car    shift, and go to state 8
    '('    shift, and go to state 9

    $default  reduce using rule 5 (ListaExpressao)

    ListaExpressao  go to state 95
    Expressao       go to state 91
    Ciclo           go to state 13
    IfElse          go to state 14
    DeclaraInt      go to state 15
    DeclaraChar     go to state 16
    Operacao        go to state 17
    AtribuicaoInt   go to state 18
    AtribuicaoChar  go to state 19
    Comparacao      go to state 20
    Termo           go to state 21
    Variavel        go to state 22


State 92

   17 IfElse: IF '(' Comparacao ')' '{' ListaExpressao . '}'
   18       | IF '(' Comparacao ')' '{' ListaExpressao . '}' ELSE '{' ListaExpressao '}'

    '}'  shift, and go to state 96


State 93

   28 ListaVariaveisChar: Variavel '=' '\'' car '\'' ',' . ListaVariaveisChar

    pal  shift, and go to state 6
    car  shift, and go to state 8

    ListaVariaveisChar  go to state 97
    Variavel            go to state 26


State 94

   16 Ciclo: WHILE '(' Comparacao ')' '{' ListaExpressao '}' .

    $default  reduce using rule 16 (Ciclo)


State 95

    6 ListaExpressao: Expressao ListaExpressao .

    $default  reduce using rule 6 (ListaExpressao)


State 96

   17 IfElse: IF '(' Comparacao ')' '{' ListaExpressao '}' .
   18       | IF '(' Comparacao ')' '{' ListaExpressao '}' . ELSE '{' ListaExpressao '}'

    ELSE  shift, and go to state 98

    $default  reduce using rule 17 (IfElse)


State 97

   28 ListaVariaveisChar: Variavel '=' '\'' car '\'' ',' ListaVariaveisChar .

    $default  reduce using rule 28 (ListaVariaveisChar)


State 98

   18 IfElse: IF '(' Comparacao ')' '{' ListaExpressao '}' ELSE . '{' ListaExpressao '}'

    '{'  shift, and go to state 99


State 99

   18 IfElse: IF '(' Comparacao ')' '{' ListaExpressao '}' ELSE '{' . ListaExpressao '}'

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    WHILE  shift, and go to state 3
    IF     shift, and go to state 4
    pal    shift, and go to state 6
    num    shift, and go to state 7
    car    shift, and go to state 8
    '('    shift, and go to state 9

    ListaExpressao  go to state 100
    Expressao       go to state 91
    Ciclo           go to state 13
    IfElse          go to state 14
    DeclaraInt      go to state 15
    DeclaraChar     go to state 16
    Operacao        go to state 17
    AtribuicaoInt   go to state 18
    AtribuicaoChar  go to state 19
    Comparacao      go to state 20
    Termo           go to state 21
    Variavel        go to state 22


State 100

   18 IfElse: IF '(' Comparacao ')' '{' ListaExpressao '}' ELSE '{' ListaExpressao . '}'

    '}'  shift, and go to state 101


State 101

   18 IfElse: IF '(' Comparacao ')' '{' ListaExpressao '}' ELSE '{' ListaExpressao '}' .

    $default  reduce using rule 18 (IfElse)
